6758234: if (k cond (a ? : b: c)) returns reversed answer if k is constant and b and c are longs

Reviewed-by: kvn, jrose